--- a/stack.yaml
+++ b/stack.yaml
@@ -30,10 +30,6 @@ resolver: lts-16.22
 #   - wai
 packages:
   - .
-  - ../lightarrow
-  - ../dunai/dunai
-  - ../dunai/dunai-frp-bearriver
-  - ../GPipe-Core/GPipe-Core
 
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
@@ -44,7 +40,22 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-extra-deps: [bindings-GLFW-3.2.1.1, GLFW-b-3.2.1.1, GPipe-GLFW-1.4.1.2, wavefront-0.7.1.4]
+extra-deps:
+  - git: https://github.com/Linearity/lightarrow.git
+    commit: 54d42d313cab519d379642d5cdaaf02d0cd50a5a
+  - git: https://github.com/Linearity/dunai.git
+    commit: 80b23457458e07939c1e7bc575b19ebfc30b051e
+    subdirs:
+      - dunai
+      - dunai-frp-bearriver
+  - git: https://github.com/Linearity/GPipe-Core.git
+    commit: af60350f471394ebaf27a5b6d02d2a7db6e5a20a
+    subdirs:
+      - GPipe-Core
+  - bindings-GLFW-3.2.1.1
+  - GLFW-b-3.2.1.1
+  - GPipe-GLFW-1.4.1.2
+  - wavefront-0.7.1.4
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
