--- a/fairybow.cabal
+++ b/fairybow.cabal
@@ -66,7 +66,7 @@ library
                        Graphics.FairyBow.Rasterize
                        Graphics.FairyBow.Rectangle
                        Sound.FairyBow
-                       Sound.FairyBow.Playback
+                       Sound.FairyBow.Mixer
                        System.FairyBow
                        System.FairyBow.Actuation
                        System.FairyBow.Joystick
