--- a/fairybow.cabal
+++ b/fairybow.cabal
@@ -20,6 +20,7 @@ library
                        bytestring,
                        containers,
                        deepseq,
+                       hashable,
                        JuicyPixels,
                        lightarrow,
                        linear,
